	* Source/BinaryCStream.m: Fix includes for WIN32
	* Source/NSCalandarDate.m: Likewise.
	* Source/NSDate.m: Likewise.
	* Source/NSLog.m: Likewise.
	* Source/NSPipe.m: Likewise.
	* Source/NSProcessInfo.m: Likewise.
	* Source/NSRunLoop.m: Likewise.
	* Source/NSUserDefaults.m: Likewise.
	* Source/StdioStream.m: Likewise.
	* Source/UdpPort.m: Likewise.
	* Tools/gdomap.c: Likewise.

	* Source/Invocation.m (initWithTarget:selector:): Use proper cast.
	* Source/NSFileManager.m (-isExecutableFileAtPath): Typo.
	* Source/NSPage.m (getpagesize): New function for WIN32
	* Source/NSString.m (-indexOfString): New method.
	
	* Source/NSBundle.m (bundle_directory_readable,
	bundle_file_readable, _bundle_name_first_match): New functions
	use NSFileManager instead of unix dir functions.
	(-initWithPath:) Use them.
	(-pathForResource:...): Likewise.
	(-pathsForResource:...): Likewise.

2000-06-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSConnection.h: Changed reply_depth ivar to be
	called request_depth instead.
	* Source/NSConnection.m: Changed reply_depth ivar to request_depth
	and modified code to make independent conversation queueing
	effective on the basis of incoming requests being handled rather than
	outgoing replies.  This should make it work for oneway methods.

Tue May 30 19:54:25 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSProcessInfo.m ([NSProcessInfo +load]): If environ ==
	NULL, abort with an informative message rather than crashing
	without explanations.

2000-05-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Protect all use of map tables of bundles
	using lock - should make class thread-safe.

2000-05-25  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/GSIArray.h: remove config.h
	* Headers/gnustep/base/GSIMap.h: Likewise.

2000-05-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: ([-directoryContentsAtPath:])
	Don't follow symbolic links

2000-05-23  Adam Fedor  <fedor@gnu.org>
